--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ addons:
       - php-zeroc-ice # use it to install php5 for now
 
 install:
+  - sudo apt-get install mono-devel mono-mcs -qq
   - haxelib install hxcpp
   - haxelib install hxjava
   - haxelib install hxcs
@@ -22,7 +23,7 @@ script:
   - haxe build-js.hxml && node bin/HelloWorld.js
   - haxe build-java.hxml && java -jar bin/HelloWorld.jar
   - haxe build-php.hxml && php bin/index.php
-  - haxe build-cs.hxml -D no-compilation # Missing mono compiler. Just run the haxe compiler for now
+  - haxe build-cs.hxml && mono bin/bin/HelloWorld.exe
   - haxe build-flash.hxml # Flash testing is hard to setup. Just run the haxe compiler for now
   - haxe build-cpp.hxml && ./bin/HelloWorld
   - if [ "${TRAVIS_HAXE_VERSION}" = "development" ]; then haxe build-python.hxml && python3 bin/HelloWorld.py; fi
