--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ matrix:
       osx_image: xcode7.3
 
 install:
+  - brew uninstall --force brew-cask
   - brew update
   - brew cask install flash-player
 
