--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ install:
       brew install python3;
     fi
   # Download and setup a standalone flash player debugger
-  - haxe flash/install.hxml
+  - haxe -debug -D eval-stack flash/install.hxml
   # Install haxelibs
   - if [ "${TRAVIS_HAXE_VERSION}" = "development" ]; then
       haxelib git hxcpp https://github.com/HaxeFoundation/hxcpp.git;
